tests/struct/syntax_err4.rev
struct Foo {
    fn init() {

} // error: missing '}' after structure body
